<resources>
    <string name="app_name">Potentiostat</string>
    <string name="new_scan"> Create New Scan</string>
    <string name="my_procedures">My Scans</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="cyclic_voltammetry">Cyclic Voltammetry</string>
    <string name="amperometry">Amperometry</string>
    <string name="direct_pulse_voltammetry">Direct Pulse Voltammetry</string>
    <string name="select_procedure">Select Procedure</string>
    <string name="EIS">Impedance Spectroscopy</string>
    <string name="name">Name</string>
    <string name="wait">Wait</string>
    <string name="exit_alert_title">Discard Changes?</string>
    <string name="exit_alert_message">Are you sure you want to discard the changes made on this page?</string>
    <string name="start_potential">Start Potential</string>
    <string name="upper_vertex">Upper Vertex</string>
    <string name="lower_vertex">Lower Vertex</string>
    <string name="stop_potential">Stop Potential</string>
    <string name="no_of_scans">No. of Scans</string>
    <string name="scan_rate">Scan Rate</string>
    <string name="step">Step</string>
    <string name="start_scan">Start Scan</string>
    <string name="seconds">s</string>
    <string name="potentialUnit">V</string>
    <string name="scanRateUnit">V/s</string>
    <string name="potential">Potential</string>
    <string name="duration">Duration</string>
    <string name="modulation_amplitude">Modulation Amplitude</string>
    <string name="modulation_time">Modulation Time</string>
    <string name="interval_time">Interval Time</string>
    <string name="first_applied_frequency">First Applied Freq.</string>
    <string name="last_applied_freq">Last Applied Freq.</string>
    <string name="no_of_frequencies">No. of Frequencies</string>
    <string name="amplitude">Amplitude</string>
    <string name="wave_type">Wave Type</string>
    <string name="first_freq">1st Frequency</string>
    <string name="hertz">Hz</string>
    <string name="last_frequency">Last Frequency</string>
    <string name="text_view">Text View</string>
    <string name="test_circuit">Test Circuit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="discoverable">Discoverable</string>
    <string name="paired_devices">Search Devices</string>
    <string name="BT_not_avail">Device does not support Bluetooth</string>
    <string name="BT_avail">Bluetooth is available</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="none">None</string>
    <string name="BT_turnOn">Turning on bluetooth…</string>
    <string name="BT_turnOff">Bluetooth has been turned off</string>
    <string name="BT_alreadyOn">Bluetooth is already on</string>
    <string name="welcome">Hello </string>
    <string name="select_option">Select an Option to Proceed</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up"> <u>Sign up</u> </string>
    <string name="sign_up_wu">Sign up</string>
    <string name="retype_password">Retype Password</string>
    <string name="connect">Connect</string>
    <string name="pair">Pair</string>
    <string name="nottastat">NottaStat</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="save_reading">Save Reading</string>


</resources>