<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImpedanceSpectroscopy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtEIS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/rubik"
            android:text="@string/EIS"
            android:textColor="@color/shrine_pink_900"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEISName"
                    android:text="@string/name"
                    style="@style/TextBody"
                    android:layout_marginTop="120dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtFirstFreq"
                    android:text="@string/first_applied_frequency"
                    style="@style/TextBody" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLastFreq"
                    android:text="@string/last_applied_freq"
                    style="@style/TextBody" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNumberFreq"
                    android:text="@string/no_of_frequencies"
                    style="@style/TextBody" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAmplitude"
                    android:text="@string/amplitude"
                    style="@style/TextBody" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtWaveType"
                    android:text="@string/wave_type"
                    style="@style/TextBody" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="100dp"
                    android:hint="@string/name"
                    app:hintTextColor="@color/shrine_pink_900">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtEISName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/first_freq"
                    app:hintTextColor="@color/shrine_pink_900"
                    app:suffixText="@string/hertz">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtFirstFreq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/last_frequency"
                    app:hintTextColor="@color/shrine_pink_900"
                    app:suffixText="@string/hertz">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtLastFreq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/no_of_frequencies"
                    app:hintTextColor="@color/shrine_pink_900">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtNumberFreq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/amplitude"
                    app:hintTextColor="@color/shrine_pink_900"
                    app:suffixText="@string/potentialUnit">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtAmplitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/waveTypeSpinner"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDPVStartScan"
            android:text="@string/start_scan"
            android:padding="20dp"
            android:layout_marginTop="550dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"

            />
    </RelativeLayout>

</ScrollView>