<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Amperometry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAmperometry"
        android:text="@string/amperometry"
        android:fontFamily="@font/dancing_script"
        android:textSize="27sp"
        android:textColor="@color/shrine_pink_900"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmpName"
            android:text="@string/name"
            style="@style/TextBody"
            android:layout_marginTop="175dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmpWait"
            android:text="@string/wait"
            style="@style/TextBody" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmpPotential"
            android:text="@string/potential"
            style="@style/TextBody" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmpDuration"
            android:text="@string/duration"
            style="@style/TextBody" />


    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintTextColor="@color/shrine_pink_900"
                android:layout_marginTop="160dp"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtTxtAmpName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/wait"
                app:hintTextColor="@color/shrine_pink_900"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:suffixText="@string/seconds">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtTxtAmpWait"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/potential"
                app:hintTextColor="@color/shrine_pink_900"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:suffixText="@string/potentialUnit">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtTxtAmpPotential"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/duration"
                app:hintTextColor="@color/shrine_pink_900"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:suffixText="@string/seconds">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtTxtAmpDuration"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAmpStartScan"
        android:text="@string/start_scan"
        android:layout_marginTop="475dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        />

    </RelativeLayout>
</ScrollView>