<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:fontFamily="@font/rubik"
            android:textSize="27sp"
            android:textColor="@color/shrine_pink_900"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp" />

        <Button
            android:id="@+id/btnBluetooth"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/bluetooth"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            style="@style/Widget.MaterialComponents.Button"
            app:icon = "@drawable/ic_bluetooth"/>

        <Button
            android:id="@+id/btnCloudStorage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/cloud_backup"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            style="@style/Widget.MaterialComponents.Button"
            app:icon = "@drawable/ic_cloud"/>
    </LinearLayout>

</ScrollView>